# ComfyUI-QuantOps

./: BNB8BIT_SAVE_WIP.md  NVFP4_Branch_Alignment_Plan_Copy.md  NVFP4_IMPLEMENTATION.md  README.md  SDNQ_INT8_STATUS.md  __init__.py  bnb4bit_ops.py  int4_implementation_plan.md  nvfp4_ops.py  pyproject.toml  quantized_ops.py  requirements.txt  sdnq_ops.py  tensorwise_int8_ops.py  unified_ops.py
kernels/: fp8_kernels.py  int8_kernels.py
nodes/: bnb8bit_loader.py  bnb_quantize_loader.py  loader_nodes.py
quant_layouts/: fp8_variants.py  int8_layout.py  nvfp4_layout.py  sdnq_layout.py  tensorwise_int8_layout.py
utils/: float_utils.py  hardware_check.py  safetensors_loader.py
