[project]
name = "ComfyUI-QuantOps"
description = "Extended quantization layouts for ComfyUI (INT8, row/block-wise FP8)"
version = "1.9.3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    {name = "silveroxides"}
]
keywords = ["comfyui", "quantization", "fp8", "int8", "ai", "inference"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI-QuantOps"

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "QuantOps"
Icon = "https://github.com/silveroxides/ComfyUI-QuantOps/raw/refs/heads/main/assets/net-icon.png"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_layouts*", "kernels*", "nodes*"]
